Include site ID for stats reports in configuration
The site identifier that the client uses to reports stats must differ
for the Blockscout instances (i.e. Laika and TLBC). There this value
became configurable via environment variables. Since there is no such as
a default instance, there is also no default value.

Related to: trustlines-protocol/blockscout#31

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -46,6 +46,9 @@ endif
 ifdef NETWORK_PATH
 	BLOCKSCOUT_CONTAINNER_PARAMS += -e 'NETWORK_PATH=$(NETWORK_PATH)'
 endif
+ifdef STATS_SITE_ID
+	BLOCKSCOUT_CONTAINNER_PARAMS += -e 'STATS_SITE_ID=$(STATS_SITE_ID)'
+endif
 
 HAS_BLOCKSCOUT_IMAGE := $(shell docker images | grep ${DOCKER_IMAGE})
 build: 
